--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,13 @@
  *
  *= require_self
  */
+
+.jumbotron {
+    margin-bottom: 0px;
+    background-image: url(http://farm4.staticflickr.com/3762/11760609733_c2893b925e_b.jpg);
+    background-position: 0% 25%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+    text-shadow: black 0.3em 0.3em 0.3em;
+}
