--- a/app/views/actor_templates/show.html.erb
+++ b/app/views/actor_templates/show.html.erb
@@ -36,8 +36,16 @@
   <dd>
     <img src="<%= @actor.image_url %>" width="320">
   </dd>
+  <dt>
+    Number of films
+  </dt>
+  <dd>
+    <%= @actor.movies.count %>
+  </dd>
 
 </dl>
+
+
 
 <a href="/delete_actor/<%= @actor.id %>" class="btn btn-danger">
   Delete actor
@@ -48,3 +56,50 @@
 <a href="/actors">
   Go back
 </a>
+
+<div class="card mt-4">
+  <div class="card-header">
+    Filmography
+  </div>
+  <ul class="list-group list-group-flush">
+    <% @actor.characters.each do |character| %>
+    <li class="list-group-item">
+      <a href="/movies/<%= character.movie.id %>"><%= 
+      character.actor.name
+      %></a>
+    </li>
+    <% end %>
+  </ul>
+  <div class="card-header">
+    Add a new character for this actor.
+  </div>
+  <div class="p-5">
+  <form action="/create_character" method="post" >
+  <!-- Label and input for title -->
+  <div class="form-group">
+    <label for="name">
+      Name
+    </label>
+
+    <input type="text" id="name" name="name" class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="actor_id">
+      Movie
+    </label>
+
+    <%= select_tag("movie_id", options_from_collection_for_select(Movie.all, :id, :title, @movie.try(:actor_id)), :class => "form-control") %>
+  or <a href="/movies/new">add a new movie</a> first
+  </div>
+
+  
+  <input type="hidden" name="actor_id" value="<%= @actor.id %>">
+  
+  <button class="btn btn-block btn-outline-secondary">
+    Create character
+  </button>
+  </div>
+
+</form>
+</div>
+</div>
