--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
           <li class="nav-item"><a class="nav-link" href="/clubssearch">Search</a></li>
           <li class="nav-item"><a class="nav-link" href="/categories">Categories</a></li>
           <li class="nav-item"><a class="nav-link" href="/tags">Tags</a></li>
+          <li class="nav-item"><a class="nav-link" href="/experiment">Experiment</a></li>
         </ul>
       </div>
     </nav>
