club profile page built out

--- a/app/views/attendance_templates/index.html.erb
+++ b/app/views/attendance_templates/index.html.erb
@@ -22,7 +22,7 @@
         </th>
 
         <th>
-          Student
+          user
         </th>
 
         <th>
@@ -48,7 +48,7 @@
         </td>
 
         <td>
-          <%= attendance.student_id %>
+          <%= attendance.user_id %>
         </td>
 
         <td>
