--- a/app/views/enrollment_templates/index.html.erb
+++ b/app/views/enrollment_templates/index.html.erb
@@ -26,7 +26,7 @@
         </th>
 
         <th>
-          Student
+          user
         </th>
 
         <th>
@@ -46,8 +46,8 @@
         </td>
 
         <td>
-          <a href="students/<%= enrollment.student_id %>">
-            <%= enrollment.student.name %>
+          <a href="users/<%= enrollment.user_id %>">
+            <%= enrollment.user.firstname %>
           </a>
         </td>
 
