--- a/app/views/enrollment_templates/new_form.html.erb
+++ b/app/views/enrollment_templates/new_form.html.erb
@@ -23,17 +23,17 @@
     <label for="club_id">
       Club
     </label>
-<%= select_tag("club_id", options_from_collection_for_select(Club.all, :id, :title, @student.try(:club_id)), :class => "form-control") %>
+<%= select_tag("club_id", options_from_collection_for_select(Club.all, :id, :title, @user.try(:club_id)), :class => "form-control") %>
   or <a href="/clubs/new">add a new club</a> first
   </div>
 
   <div class="form-group">
-    <label for="student_id">
-      Student
+    <label for="user_id">
+      user
     </label>
 
-   <%= select_tag("student_id", options_from_collection_for_select(Student.all, :id, :name, @club.try(:student_id)), :class => "form-control") %>
-  or <a href="/students/new">add a new student</a> first
+   <%= select_tag("user_id", options_from_collection_for_select(User.all, :id, :firstname, @club.try(:user_id)), :class => "form-control") %>
+  or <a href="/users/new">add a new user</a> first
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
