--- a/app/views/attendance_templates/new_form.html.erb
+++ b/app/views/attendance_templates/new_form.html.erb
@@ -8,11 +8,12 @@
 <form action="/create_attendance" method="post">
 
   <div class="form-group">
-    <label for="student_id">
-      Student
+    <label for="user_id">
+      user
     </label>
 
-    <input type="text" id="student_id" name="student_id" class="form-control">
+   <%= select_tag("user_id", options_from_collection_for_select(User.all, :id, :name), :class => "form-control") %>
+  or <a href="/users/new">add a new user</a> first
   </div>
 
   <div class="form-group">
@@ -20,7 +21,8 @@
       Event
     </label>
 
-    <input type="text" id="event_id" name="event_id" class="form-control">
+    <%= select_tag("event_id", options_from_collection_for_select(Event.all, :id, :title), :class => "form-control") %>
+  or <a href="/users/new">add a new user</a> first
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
